--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
     "bootstrap": "^5.0.2",
+    "emailjs-com": "^3.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
